# dimpl

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DTLS13-COMPLIANCE.md  DTLS13.md  README.md  alloc.md  deny.toml  dtls12.html  tls12.html
.github/workflows/: cargo.yml  codeql.yml  fuzz.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_dtls13_packet.rs  fuzz_dtls13_record_parse.rs  fuzz_dtls_packet.rs  fuzz_record_parse.rs
src/: auto.rs  buffer.rs  certificate.rs  client.rs  codec.rs  config.rs  detect.rs  engine.rs  error.rs  event.rs  incoming.rs  lib.rs  queue.rs  rng.rs  server.rs  state.rs  timer.rs  types.rs  util.rs  window.rs
src/crypto/: certificate.rs  context13.rs  dtls_aead.rs  encryption.rs  ffdhe2048.rs  hash.rs  key_exchange.rs  keying.rs  mod.rs  parsed_key.rs  prf.rs  provider.rs  signing.rs  tls13_key_schedule.rs
src/crypto/apple_crypto/: cipher_suite.rs  common_crypto.rs  hash.rs  hmac.rs  kx_group.rs  mod.rs  sign.rs  tls12.rs
src/crypto/aws_lc_rs/: cipher_suite.rs  hash.rs  hkdf.rs  hmac.rs  kx_group.rs  mod.rs  random.rs  sign.rs  tls12.rs
src/crypto/rust_crypto/: cipher_suite.rs  hash.rs  hkdf.rs  hmac.rs  kx_group.rs  mod.rs  random.rs  sign.rs  tls12.rs
src/crypto/validation/: mod.rs
src/dtls12/: client.rs  context.rs  engine.rs  incoming.rs  mod.rs  queue.rs  server.rs
src/dtls12/message/: certificate_request.rs  client_hello.rs  client_key_exchange.rs  extension.rs  finished.rs  handshake.rs  mod.rs  named_group.rs  record.rs  server_hello.rs  server_key_exchange.rs
src/dtls12/message/extensions/: connection_id.rs  ec_point_formats.rs  mod.rs  signature_algorithms.rs  supported_groups.rs  use_srtp.rs
src/dtls13/: client.rs  engine.rs  incoming.rs  mod.rs  queue.rs  server.rs
src/dtls13/message/: certificate.rs  client_hello.rs  digitally_signed.rs  encrypted_extensions.rs  extension.rs  finished.rs  handshake.rs  mod.rs  random.rs  record.rs  server_hello.rs  wrapped.rs
src/dtls13/message/extensions/: cookie.rs  key_share.rs  mod.rs  signature_algorithms.rs  supported_groups.rs  supported_versions.rs  use_srtp.rs
src/message/: ack.rs  application_data.rs  certificate.rs  certificate_request.rs  certificate_verify.rs  change_cipher_spec.rs  client_diffie_hellman.rs  client_diffie_hellman_public.rs  client_hello.rs  client_key_exchange.rs  digitally_signed.rs  encrypted_extensions.rs  encrypted_pre_master_secret.rs  error.rs  extension.rs  finished.rs  fragment.rs  handshake.rs  hello_verify.rs  hello_verify_request.rs  id.rs  key_update.rs  mod.rs  named_curve.rs  named_group.rs  new_session_ticket.rs  parse_context.rs  pre_master_secret.rs  random.rs  record.rs  record13.rs  server_hello.rs  server_key_exchange.rs  util.rs  wrapped.rs
src/message/extensions/: cookie.rs  ec_point_formats.rs  key_share.rs  mod.rs  signature_algorithms.rs  supported_groups.rs  supported_versions.rs  use_srtp.rs
src/record/: client_hello.rs  fragment.rs  handshake.rs  mod.rs  plain_text.rs
src/types/: cipher_suite.rs  comp_meth.rs  ctype.rs  ext.rs  handshake.rs  mod.rs  numerics.rs  random.rs  varvec.rs  version.rs
tests/: all-crypto.rs  certificate_verify.rs  client-fragments.rs  client-ossl.rs  client-wolfssl.rs  compare_handshake.rs  cookie-retry.rs  dtls12-crypto.rs  dtls12-data.rs  dtls12-edge.rs  dtls12-fragmentation.rs  dtls12-handshake.rs  dtls12-ossl.rs  dtls12-reorder.rs  dtls12-retransmit.rs  dtls12_common.rs  dtls13-data.rs  dtls13-edge.rs  dtls13-fragmentation.rs  dtls13-handshake.rs  dtls13-key-update.rs  dtls13-reorder.rs  dtls13-retransmit.rs  dtls13-wolfssl.rs  dtls13.rs  dtls13_common.rs  dtls13_cookie.rs  ossl-ossl.rs  resend-dupes.rs  resend-timers.rs  server-ossl.rs  server-wolfssl.rs
tests/auto/: common.rs  cross_matrix.rs  handshake.rs  main.rs  server_fallback.rs
tests/datagrams/: client_cert.der  client_key.der  server_cert.der  server_key.der
tests/dtls12/: cid.rs  common.rs  crypto.rs  data.rs  edge.rs  fragmentation.rs  handshake.rs  main.rs  ossl.rs  psk.rs  reorder.rs  retransmit.rs
tests/dtls13/: common.rs  conformance.rs  data.rs  edge.rs  fragmentation.rs  handshake.rs  key_update.rs  main.rs  reorder.rs  retransmit.rs  wolfssl.rs
tests/ossl/: cert.rs  dtls.rs  mod.rs  stream.rs
tests/wolfssl/: mod.rs
