[package]
name = "dimpl"
authors = ["Martin Algesten <martin@algesten.se>"]
description = "DTLS 1.2 implementation (Sans‑IO, Sync)"
version = "0.1.5"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/algesten/dimpl"
readme = "README.md"
keywords = ["dtls", "tls", "webrtc"]
categories = ["network-programming", "cryptography", "security"]

# MSRV
rust-version = "1.81.0"

[features]
default = ["aws-lc-rs", "rcgen"]
aws-lc-rs = ["dep:aws-lc-rs"]
rcgen = ["aws-lc-rs", "dep:rcgen"]

[dependencies]
log = "0.4.22"
nom = { version = "7.1.3", default-features = false, features = ["std"] }
once_cell = "1.20.2"
rand = "0.9"
time = { version = "0.3", features = ["formatting"] }
arrayvec = "0.7.6"

# Crypto (and adjacent) dependencies
der = "0.7"
pkcs8 = { version = "0.10", features = ["pem"] }
sec1 = "0.7"
signature = "2.1"
spki = "0.7"
x509-cert = { version = "0.2", features = ["builder", "signature"] }
aws-lc-rs = { version = "1", default-features = false, features = ["aws-lc-sys", "prebuilt-nasm"], optional = true }
rcgen = { version = "0.14.5", default-features = false, features = ["aws_lc_rs"], optional = true }

[dev-dependencies]
openssl = { version = "0.10.70", features = ["vendored"] }
libc = "0.2"
env_logger = "0.11.8"
x509-parser = "0.16"
