[package]
name = "dimpl"
authors = ["Martin Algesten <martin@algesten.se>"]
description = "DTLS 1.2 and 1.3 implementation (Sans‑IO, Sync)"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/algesten/dimpl"
readme = "README.md"
keywords = ["dtls", "tls", "webrtc"]
categories = ["network-programming", "cryptography", "security"]

# MSRV
rust-version = "1.81.0"

[features]
default = ["aws-lc-rs", "rcgen"]

# Default crypto provider
aws-lc-rs = ["dep:aws-lc-rs", "dep:aes"]

# Pure Rust crypto provider
rust-crypto = ["dep:aes", "dep:aes-gcm", "dep:p256", "dep:p384", "dep:sha2", "dep:hmac", "dep:hkdf", "dep:ecdsa", "dep:generic-array", "dep:rand_core"]

# Test helpers: exposes internal methods for testing (AEAD limits, KeyUpdate counters)
test-helpers = []

# Self-signed certificate generation.
# rcgen can either use ring or aws-lc-rs. We have decided to use aws-lc-rs to limit the number
# of crypto libraries we depend upon. If you enable rcgen, you are implicitly also compiling aws-lc-rs.
# The self-signed certificate comes with a sha256 fingerprint that, where we use aws-lc-rs to compute it.
# Since we are compiling aws-lc-rs anyway, enabling the feature is no extra cost.
rcgen = ["dep:rcgen", "aws-lc-rs"]

[dependencies]
log = "0.4.22"
nom = { version = "7.1.3", default-features = false, features = ["std"] }
once_cell = "1.20.2"
rand = "0.9"
time = { version = "0.3", features = ["formatting"] }
arrayvec = "0.7.6"
subtle = "2.6"

der = "0.7"
pkcs8 = { version = "0.10", features = ["pem"] }
sec1 = "0.7"
signature = "2.1"
spki = "0.7"
x509-cert = { version = "0.2", default-features = false }

# aws-lc-rs backend
aws-lc-rs = { version = "^1.14", default-features = false, features = ["aws-lc-sys"], optional = true }

# RustCrypto backend
aes-gcm = { version = "0.10", optional = true }
# AES-ECB for DTLS 1.3 sequence number encryption (RFC 9147 Section 4.2.3).
# Used by both crypto providers; aws-lc-rs doesn't expose raw AES block encryption.
aes = { version = "0.8", optional = true }
p256 = { version = "0.13", optional = true, features = ["ecdh"] }
p384 = { version = "0.13", optional = true, features = ["ecdh"] }
sha2 = { version = "0.10", optional = true }
hmac = { version = "0.12", optional = true }
hkdf = { version = "0.12", optional = true }
ecdsa = { version = "0.16", optional = true, features = ["signing", "verifying"] }
generic-array = { version = "0.14", optional = true }
rand_core = { version = "0.6", optional = true }

# certificate generation
rcgen = { version = "0.14.5", default-features = false, features = ["aws_lc_rs"], optional = true }

[dev-dependencies]
openssl = "0.10.70"
foreign-types = "0.5"
libc = "0.2"
env_logger = "0.11.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
x509-parser = "0.16"
hex = "0.4"
bytes = "1"

# wolfssl doesn't build on Windows
[target.'cfg(not(windows))'.dev-dependencies]
wolfssl = "3.0.0"
